--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ install:
 # We install cairo and libarchive from Homebrew to pull in the dependencies, but use the custom Lion compatible build later.
 
 script:
+    - if [[ "${COVERITY_SCAN_BRANCH}" == 1 ]];
+      then
+          echo "Don't build on coverty_scan branch.";
+          exit 0;
+      fi
     - mkdir build && cd build
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake -DCMAKE_BUILD_TYPE=Debug ..; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DOCPN_USE_LIBCPP=ON -DwxWidgets_CONFIG_EXECUTABLE=/tmp/wx_opencpn_macos107/bin/wx-config -DwxWidgets_CONFIG_OPTIONS="--prefix=/tmp/wx_opencpn_macos107" -DLibArchive_INCLUDE_DIR=/tmp/libarchive_macos107/include -DLibArchive_LIBRARY=/tmp/libarchive_macos107/lib/libarchive.dylib -DCAIRO_INCLUDE_DIR=/tmp/cairo_macos107/include -DCAIRO_LIBRARY=/tmp/cairo_macos107/lib/libcairo.dylib -DCMAKE_INSTALL_PREFIX=/tmp/opencpn ..; fi
