--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ addons:
       description: "Build submitted via Travis CI"
     notification_email: didier@users.sourceforge.net
     build_command_prepend: "mkdir build_s && cd build_s && cmake -DCMAKE_BUILD_TYPE=Debug ../"
-    build_commandd:   "../scripts/coverity.sh"
+    build_command:   "../scripts/coverity.sh"
     branch_pattern: integration
