appveyor stuff from otcurrent

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,13 @@
 clone_folder: c:\project\opencpn
 shallow_clone: true
+image:
+- Visual Studio 2015
 
-platform: x64
+platform: 
+# - x64
+- Win32
+
 configuration: Release
-deploy: OFF
 test: OFF
 
 install:
@@ -41,5 +45,20 @@ before_build:
 
 build_script:
   - cmake --build . --config debug
-  - cmake --build . --config release
+  - cmake --build . --target package --config release
   # --target package doesn't work because of nsis not correctly installed
+
+artifacts:
+  - path: 'build\*.exe'
+    name: installer
+
+deploy:
+  description: 'release created by AppVeyor CI'
+  provider: GitHub
+  auth_token: '%GitHub_auth_token%'
+  artifact: installer,portable
+  draft: true
+  prerelease: true
+  on:
+    appveyor_repo_tag: true # deploy on tag push only
+    configuration: Release  # Debug contains non-redist MS DLLs
