Squashed 'plugins/ocpn_draw_pi/' changes from 1bd692c..ef202ce
ef202ce  Dereference before null check GZ, EBL
e77a070 unreachable code, if l_path is null , l_boundarypoint isn't
59aff8a Dereference before null check
06c63a7 OnRolloverPopupTimerEvent leak or endless loop, need testing
9851b7a  assert we aren't using an invalid iterator
073c2c0 factorise odevent setpath
6c835ec illegal access (unlikely)
314b624 unitialised value
ecdd6e2 opengl boundaries drawing memory leak
5e97eb8 unitialised value used
f4ef415 GZ don't use the same fill color for active inactive GZ
7dcfccd unitialised value
383ce2d GetOrFindMaskColour is slow, only call it if we can't shortcut test
68c209a use pugixml parser - version 1.8
27cb6e1 Add texFont source code
91e4e36 assert pPathDraw is not null
c4c1c0e assert wxGC not null
caa93d8 help static analyser
98382dc Fix PIL offset line colour scheme when changing between RGB, Day, Dusk and Night
cb610b0 Merge pull request #288 from did-g/use_ocpn_plugin_svg
0a2bce6 Merge pull request #297 from jongough/fix-1.4
9927465 Minor changes to fix possible leak and null pointer usage
50fbf17 Minor performanace enhancement for image processing
4da1689 Remove redundant debugging code
0099234 Merge pull request #294 from jongough/fix-1.4
cdb40f2 Merge remote-tracking branch 'origin/master' into fix-1.4
7a8b666 Fix up extra non MACOSX specific code
8c21b48 Merge pull request #287 from jongough/fix-1.4
00f2d9d Merge pull request #293 from did-g/null_used
2938286 Merge pull request #292 from did-g/copy_and_paste
7a860e0 Merge pull request #291 from did-g/boundary_memory_leak
eec3db9 Merge pull request #290 from did-g/unix_error_too
405898c not only OSX
6fdf0f5 memory leak
6c71785 not only OSX
79cad3c not only OSX
5923555 Merge pull request #287 from jongough/fix-1.4
60d4ac9 Merge pull request #290 from did-g/unix_error_too
95ebffa Changes to allow in tree build. Ensure OD includes used before OCPN includes
e1499a6 Fix MarkIcon header file in cmake
84d5ebf ocp

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -69,6 +69,7 @@ include/ODdc.h
 include/ODDRDialogDef.h
 include/ODDRDialogImpl.h
 include/ODEventHandler.h
+include/ODMarkIcon.h
 include/ODNavObjectChanges.h
 include/ODPropertiesDialogDef.h
 include/ODPropertiesDialogImpl.h
