--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -979,6 +979,7 @@ SET(HDRS
 		include/tide_time.h
 		include/ChInfoWin.h
 		include/ocpCursor.h
+		include/ChartObj.h
 		include/Quilt.h
 		include/Hyperlink.h
 		include/NavObjectCollection.h
@@ -1076,6 +1077,7 @@ SET(SRCS
 		src/AIS_Target_Data.cpp
 		src/OCPNListCtrl.cpp
 		src/Quilt.cpp
+		src/ChartObj.cpp
 		src/Hyperlink.cpp
 		src/NavObjectCollection.cpp
 		src/RoutePoint.cpp
