--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,9 @@
 # define minimum cmake version
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 IF (COMMAND cmake_policy)
-  CMAKE_POLICY(SET CMP0002 OLD)
-  CMAKE_POLICY(SET CMP0003 OLD)
-  CMAKE_POLICY(SET CMP0005 OLD)
-  CMAKE_POLICY(SET CMP0011 OLD)
+  if (POLICY CMP0043)
+    CMAKE_POLICY(SET CMP0043 NEW)
+  endif (POLICY CMP0043)
 ENDIF (COMMAND cmake_policy)
 
 PROJECT(ocpn_draw_pi)
@@ -22,8 +21,8 @@ SET(CPACK_PACKAGE_CONTACT "Jon Gough")
 
 SET(VERSION_MAJOR "1")
 SET(VERSION_MINOR "4")
-SET(VERSION_PATCH "32")
-SET(VERSION_DATE "01/12/2017")
+SET(VERSION_PATCH "36")
+SET(VERSION_DATE "13/12/2017")
 
 SET(BUNDLE_DATA FALSE)
 SET( CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build" )
