--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
     - sudo apt-get -qq update
     - sudo apt-get install libwxgtk3.0-dev libwxgtk3.0-0 libgps-dev libglu1-mesa-dev libgtk2.0-dev libbz2-dev libtinyxml-dev 
     - sudo apt-get install libportaudio2 portaudio19-dev libcurl4-openssl-dev libexpat1-dev libcairo2-dev librtlsdr-dev
+    - sudo apt-get install libarchive-dev
 
 script:
   - if [[ "${COVERITY_SCAN_BRANCH}" == 1 ]];
