--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,16 @@ SET(TITLE_NAME OTCurrent)
 SET(CPACK_PACKAGE_CONTACT "Mike Rossiter")
 
 SET(VERSION_MAJOR "1")
-SET(VERSION_MINOR "4")
+SET(VERSION_MINOR "5")
 
 #SET(CMAKE_BUILD_TYPE Debug)
+OPTION(OTCURRENT_USE_SVG "Use SVG graphics" ON)
 
 INCLUDE("cmake/PluginConfigure.cmake")
+
+IF(OTCURRENT_USE_SVG)
+  ADD_DEFINITIONS(-DOTCURRENT_USE_SVG)
+ENDIF(OTCURRENT_USE_SVG)
 
 SET(SRC_otcurrent
         src/bbox.cpp
