--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 clone_folder: c:\project\opencpn
 shallow_clone: true
 image:
-- Visual Studio 2017
+- Visual Studio 2015
 
 platform: 
 # - x64
@@ -11,11 +11,10 @@ configuration: Release
 test: OFF
 
 install:
-  # VS2015 and earlier version - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86'
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
-  
+  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x86'
+
   # sent environment variables for wxWidgets
-  - set WXWIN=C:\wxWidgets-3.1.1
+  - set WXWIN=C:\wxWidgets-3.0.2
   - set wxWidgets_ROOT_DIR=%WXWIN%
   - set wxWidgets_LIB_DIR=%WXWIN%\lib\vc_dll
   - cmd: SET PATH=%PATH%;%WXWIN%;%wxWidgets_LIB_DIR%;C:\Program Files (x86)\Poedit\Gettexttools\bin;
@@ -27,25 +26,25 @@ install:
   - cmd: nsis-3.03-setup.exe /S
 
   # Download and unzip wxwidgets
-  - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/wxWidgets-3.1.1.7z
-  - cmd: 7z x wxWidgets-3.1.1.7z -o%WXWIN% > null
+  - ps: Start-FileDownload http://downloads.sourceforge.net/project/wxwindows/3.0.2/wxWidgets-3.0.2.zip
+  - cmd: 7z x wxwidgets-3.0.2.zip -o%WXWIN% > null
 
   # some debugging information
   - set
   # - cmake --help
 
-  # build wxWidgets - Disabled as we provide prebuilt WX to save time
-  #- cmd: cd %WXWIN%\build\msw\
-  #- cmd: nmake -f makefile.vc BUILD=release SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
-  #- cmd: nmake -f makefile.vc BUILD=debug SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
+  # build wxWidgets
+  - cmd: cd %WXWIN%\build\msw\
+  - cmd: nmake -f makefile.vc BUILD=release SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
+  - cmd: nmake -f makefile.vc BUILD=debug SHARED=1 CFLAGS=/D_USING_V120_SDK71_ CXXFLAGS=/D_USING_V120_SDK71_
 
 before_build:
   - cd c:\project\opencpn
   - mkdir build
   - cd build
-  - ps: Start-FileDownload http://opencpn.navnux.org/build_deps/OpenCPN_buildwin-4.99.7z
-  - cmd: 7z x -y OpenCPN_buildwin-4.99.7z -oc:\project\opencpn\buildwin
-  - cmake -T v141_xp ..
+  - ps: Start-FileDownload http://downloads.sourceforge.net/project/opencpnplugins/opencpn_packaging_data/OpenCPN_buildwin.7z
+  - cmd: 7z x -y OpenCPN_buildwin.7z -oc:\project\opencpn
+  - cmake -T v120_xp ..
 
 build_script:
   # - cmake --build . --config debug
