Squashed 'plugins/weather_routing_pi/' changes from 6e009f5..9cb33c2
9cb33c2 improve position time if cursor outside route or on an edge
dad2ccb Merge branch 'position_time' into dev
718e4ed add time to cursor position dialog
e21617f tweak again speed governor in slow end
f45b862 merge downwind periods
d301192 tweak speed governor in slow end
3a7a0f0 fix best downwind report
6fbecd9 use a static const array for route colors
fa41122 disable MaxCourseAngle and MaxDivertedCourse angle in slow start
1345f21 don't test for land or boundaries after end point
43ec5bd tweak propagate again
e25a8e0 tweak slow end start
23c26cf increase angular resolution if boundary/land 2
dd0b49f hack for get first crossing not closest, should be faster
5a018ec use correct number for rounding on slow start exit
8981edc increase angular resolution if boundary/land
6d54c90 slow end
658060c always test boundary points, they don't have distance
701d876 don't search for boundaries after end point
5471f92 enter boundary distance and right time interval for plot
0e89a9b use the right time interval for end propagation
13fd345 slow start
0fe5d11 Revert "use last position if can't reach with n-1"
2a7fd5e start with a small step
1fc7b51 don't subsearch if boundary is an inclusion
19e6917 add some head to boundary entry detection
1bb473c try smaller angular step if boundary
b5722f8 use last position if can't reach with n-1
bc53525 request DR to cache its boundaries, unfinished
f8669ac temporary add new opencpn.lib
40d8090 initialised W VW, otherwise function can return without setting them
35c089b use a reference rather than a copy
e79507a merge O grib record
611937e backport from grib_pi
0944726 backport GribRecord stuff from OpenCPN
dc783b6 backport timeline changes from oCPN
e682022 Merge pull request #143 from nohal/master
4ee57ac React also to EVT_COMMAND_COMBOBOX_SELECTED (Makes the change of the position significantly more reliable). Also add column header to the Visibility column most of the us

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,12 +60,12 @@ SET(SRC_WEATHER_ROUTING
             src/GribRecord.cpp
 )
 
-IF(WIN32)
+#IF(WIN32)
 SET(SRC_JSON
             src/wxJSON/jsonval.cpp
             src/wxJSON/jsonreader.cpp
             src/wxJSON/jsonwriter.cpp)
-ENDIF(WIN32)
+#ENDIF(WIN32)
 
 SET(SRC_LIBTESS2
   src/libtess2/bucketalloc.c
