--- a/buildosx/InstallOSX/climatology_pi.pkgproj.in
+++ b/buildosx/InstallOSX/climatology_pi.pkgproj.in
@@ -8,7 +8,7 @@
 			<key>PACKAGE_FILES</key>
 			<dict>
 				<key>DEFAULT_INSTALL_LOCATION</key>
-				<string>/Applications/OpenCPN.app/Contents</string>
+				<string>/</string>
 				<key>HIERARCHY</key>
 				<dict>
 					<key>CHILDREN</key>
@@ -1334,7 +1334,7 @@
 				</dict>
 			</array>
 			<key>NAME</key>
-			<string>${VERBOSE_NAME}-Plugin_${VERSION_MAJOR}.${VERSION_MINOR}</string>
+			<string>${VERBOSE_NAME}-Plugin_${PLUGIN_VERSION_MAJOR}.${PLUGIN_VERSION_MINOR}</string>
 			<key>REFERENCE_FOLDER_PATH</key>
 			<string>.</string>
 		</dict>
@@ -1373,7 +1373,7 @@ chk_flag = (ocpn_vers &gt;= '3.3.1606'); }
 // return the check results
   return chk_flag;
   }
-  </string>
+</string>
 	</dict>
 	<key>TYPE</key>
 	<integer>0</integer>
