Squashed 'plugins/weatherfax_pi/' changes from 47312ec..4912407
4912407 fixup Revert "merge back ocpn changes"
4b34018 Revert "merge back ocpn changes"
7070b8f travis osx
a022ade travis osx
2f3bd91 travis osx
d2b47bd replace isnan with wxIsNaN c++11 madness
1232b28 merge upstream PR
f62be43 merge back ocpn changes
1404a7b import upstream tag export_ocpn
b9f4a93 MS inline stuff missing header
8d34377 MS inline stuff
d7e1ef4 Revert "yet more inlines"
353ecb9 Revert "more windoze stupid changes"
63a9765 Revert "remove inlines"
980487e Merge pull request #98 from rgleason/master
2bae64a Merge pull request #99 from Hakansv/pot
ae5638e Rename po-files. New pot-file
3887e17 xml-update-coords
ed49779 Merge pull request #97 from rgleason/master
093f961 xml-update-singapore
fdc2537 xml-update-uuwe-rick-sean
328523f add a few changing urls
325fa72 allow for urls with date and hour
ff01db2 yet more inlines
49d1b70 more windoze stupid changes
5b7e3e1 remove inlines
ae9bab5 yet more windoze macros
2640478 fix preprocessor macro
9460cea add include for windows
099c8a7 fix headers
c159a73 Merge branch 'master' of github.com:seandepagnier/weatherfax_pi
a13c6ae bump version
7fbf5b8 upgrade libaudiofile
43985e8 Merge pull request #93 from nohal/data_update
856f82e Implement dataset retrieval/update from Internet
3eea23b Update the FBP design and save with wxFormBuilder 3.6.2
3cad571 Merge pull request #92 from rgleason/xml-updates-full
3555e4c Merge pull request #90 from stelian42/use-only-local-translations
daa47b1 Merge pull request #7 from nohal/xml-updates-full
81a4ce2 Fix invalid XML.
50342d5 xml-updates-full
bd07b17 Merge pull request #91 from nohal/perf
d251a49 Merge pull request #6 from nohal/perf
b3640b3 Decrease the number of the horribly slow (on some Windows machines) calls to wxListCtrl with a little less horribly slow logic based on wxArrayString (Calls for bigger refactoring and std::unordered_set of course)
a72f0c1 Use only the plugin translations, ignore the core Open

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,13 @@ IF (MSVC)
     INCLUDE_DIRECTORIES(BEFORE ${PLUGIN_SOURCE_DIR}/include/msvc)
 ENDIF (MSVC)
 
+OPTION(WEATHERFAX_USE_SVG "Use SVG graphics" ON)
+
 INCLUDE("cmake/PluginConfigure.cmake")
+
+IF(WEATHERFAX_USE_SVG)
+  ADD_DEFINITIONS(-DWEATHERFAX_USE_SVG)
+ENDIF(WEATHERFAX_USE_SVG)
 
 SET(SRC_WEATHERFAX
             src/weatherfax_pi.cpp
@@ -74,6 +80,8 @@ SET(SRC_WEATHERFAX
             src/libaudiofile/VOC.cpp
 
             src/libaudiofile/AudioFormat.cpp
+            src/libaudiofile/Buffer.cpp
+            src/libaudiofile/FLACFile.cpp
             src/libaudiofile/File.cpp
             src/libaudiofile/FileHandle.cpp
             src/libaudiofile/Instrument.cpp
@@ -91,42 +99,39 @@ SET(SRC_WEATHERFAX
             src/libaudiofile/debug.cpp
             src/libaudiofile/format.cpp
             src/libaudiofile/openclose.cpp
+            src/libaudiofile/PacketTable.cpp
             src/libaudiofile/pcm.cpp
             src/libaudiofile/query.cpp
             src/libaudiofile/units.cpp
             src/libaudiofile/util.cpp
-            src/libaudiofile/Buffer.cpp 
-            src/libaudiofile/FLACFile.cpp 
-            src/libaudiofile/PacketTable.cpp
 
+            src/libaudiofile/alac/ALACEncoder.cpp
+            src/libaudiofile/alac/ALACDecoder.cpp
             src/libaudiofile/alac/ag_dec.c
             src/libaudiofile/alac/ag_enc.c
             src/libaudiofile/alac/ALACBitUtilities.c
-            src/libaudiofile/alac/ALACDecoder.cpp
-            src/libaudiofile/alac/ALACEncoder.cpp
             src/libaudiofile/alac/dp_dec.c
             src/libaudiofile/alac/dp_enc.c
             src/libaudiofile/alac/EndianPortable.c
             src/libaudiofile/alac/matrix_dec.c
             src/libaudiofile/alac/matrix_enc.c
-
+            
             src/libaudiofile/modules/ALAC.cpp
-            src/libaudiofile/modules/BlockCodec.cpp
-            src/libaudiofile/modules/FileModule.cpp
+            src/libaudiofile/modules/BlockCodec.cpp            
             src/libaudiofile/modules/FLAC.cpp
+            src/libaudiofile/modules/FileModule.cpp
             src/libaudiofile/modules/G711.cpp
             src/libaudiofile/modules/IMA.cpp
+            src/libaudiofile/modules/MSADPCM.cpp
             src/libaudiofile/modules/Module.cpp
             src/libaudiofile/modules/ModuleState.cpp
-            src/libaudiofile/modules/MSADPCM.cpp
             src/libaudiofile/modules/PCM.cpp
             src/libaudiofile/modules/RebufferModule.cpp
-            src/libaudiofile/modules/RebufferModule.h
             src/libaudiofile/modules/SimpleModule.cpp
 	)
 
 
-IF(UNIX AND NOT APPLE)
+IF(UNIX)
   find_library(RTLSDR_LIBRARY NAMES rtlsdr
     DOC "The rtlsdr library"
     )
@@ -144,7 +149,7 @@ IF(UNIX AND NOT APPLE)
     MESSAGE (STATUS "============================================")
     MESSAGE (STATUS "")
   ENDIF()
-ENDIF(UNIX AND NOT APPLE)
+ENDIF(UNIX)
 
       
 IF(UNIX)
@@ -156,7 +161,7 @@ IF(TINYXML_FOUND)
  message (STATUS "Building with system tinyxml")
  INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
  ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_WEATHERFAX})
- TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${TINYXML_LIBRARIES})
+ TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${TINYXML_LIBRARIES} ${EXTRA_LIBS})
 ELSE(TINYXML_FOUND)
  message (STATUS "Building with embedded tinyxml")
  INCLUDE_DIRECTORIES(src/tinyxml/)
@@ -166,9 +171,9 @@ ELSE(TINYXML_FOUND)
             src/tinyxml/tinyxmlerror.cpp
  )
  ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_WEATHERFAX} ${SRC_LTINYXML})
+ TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${EXTRA_LIBS})
 ENDIF(TINYXML_FOUND)
 ADD_DEFINITIONS(-DTIXML_USE_STL)
-
 
 IF(WIN32)
  INSTALL(FILES "buildwin/PVW32Con.exe" DESTINATION "plugins\\\\${PACKAGE_NAME}")
