--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,7 +263,7 @@ IF(NOT QT_ANDROID)
 
  
     IF(WIN32) 
-        SET(SRC_WXCURL
+        SET(SRC_OSENC_WXCURL
         src/wxcurl/base.cpp
         src/wxcurl/dav.cpp
         src/wxcurl/davtool.cpp
@@ -281,8 +281,6 @@ IF(NOT QT_ANDROID)
 
 #    ADD_LIBRARY(WXCURL ${SRC_WXCURL})
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/wxcurl)
-#    SET(EXTRA_LIBS ${EXTRA_LIBS} WXCURL)
-#    SET(EXTRA_LIBS ${EXTRA_LIBS} ${CURL_LIBRARIES})
     
     MESSAGE (STATUS "wxCurl configured...")
 
@@ -303,7 +301,7 @@ ENDIF(TINYXML_FOUND)
 ADD_DEFINITIONS(-DTIXML_USE_STL)
 
 
-ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_OESENC} ${SRC_CPL} ${SRC_ISO8211} ${SRC_DSA} ${SRC_S57ENC} ${SRC_JSON} ${SRC_OSHOP} ${SRC_WXCURL} ${SRC_LTINYXML})
+ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_OESENC} ${SRC_CPL} ${SRC_ISO8211} ${SRC_DSA} ${SRC_S57ENC} ${SRC_JSON} ${SRC_OSHOP} ${SRC_OSENC_WXCURL} ${SRC_LTINYXML})
 
 IF (QT_ANDROID )
     TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${OCPN_Core_LIBRARIES} )
