Squashed 'plugins/weatherfax_pi/' changes from d241e21..1b89e7e
1b89e7e build OSX pkg

git-subtree-dir: plugins/weatherfax_pi
git-subtree-split: 1b89e7e59c7933b43cb60732379d2171518a5144

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ script:
         cp /tmp/libarchive_macos107/lib/libarchive.16.dylib /tmp/opencpn/bin/OpenCPN.app/Contents/MacOS/; 
         cp /tmp/cairo_macos107/lib/libcairo.2.dylib /tmp/opencpn/bin/OpenCPN.app/Contents/MacOS/; 
         make install; 
+        make create-pkg;
      fi
 
 notifications:
