--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -669,6 +669,7 @@ IF(NOT QT_ANDROID)
         src/wxcurl/utils.cpp
     )
     ADD_LIBRARY(WXCURL ${SRC_WXCURL})
+
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/wxcurl)
     SET(EXTRA_LIBS ${EXTRA_LIBS} WXCURL)
     SET(EXTRA_LIBS ${EXTRA_LIBS} ${CURL_LIBRARIES})
@@ -958,6 +959,8 @@ set(SQLITECPP_INC
 )
 include_directories( src/SQLiteCpp/include )
 ADD_LIBRARY(SQLiteCpp ${SQLITECPP_SRC} ${SQLITECPP_INC})
+set_property(TARGET SQLiteCpp PROPERTY COMPILE_FLAGS "${OBJ_VISIBILITY}")
+
 SET(EXTRA_LIBS ${EXTRA_LIBS} SQLiteCpp)
 
 
@@ -1072,6 +1075,8 @@ SET(SRC_NMEA0183
         src/nmea0183/xte.hpp
 	)
 ADD_LIBRARY(NMEA0183 ${SRC_NMEA0183})
+set_property(TARGET NMEA0183 PROPERTY COMPILE_FLAGS "${OBJ_VISIBILITY}")
+
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/nmea0183)
 
 
